--- a/VdubApp/Base.lproj/Main.storyboard
+++ b/VdubApp/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                                                     <rect key="frame" x="15" y="12" width="32" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oCA-TN-yfg">
@@ -299,7 +299,7 @@
                                     <constraint firstAttribute="width" constant="106" id="avO-Zn-Wak"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rhN-pc-4w8">
@@ -389,19 +389,54 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5HZ-0u-GpL">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5HZ-0u-GpL">
                                 <rect key="frame" x="0.0" y="44" width="320" height="460"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="u4L-N0-PEh">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="u4L-N0-PEh" id="ehm-RO-m3v">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCE-Am-Yjh">
+                                                    <rect key="frame" x="8" y="11" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="QCE-Am-Yjh" firstAttribute="centerY" secondItem="ehm-RO-m3v" secondAttribute="centerY" id="W3C-7d-W7P"/>
+                                                <constraint firstItem="QCE-Am-Yjh" firstAttribute="leading" secondItem="ehm-RO-m3v" secondAttribute="leadingMargin" id="jZv-9e-6D7"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="zsA-wd-9ZL">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="JZB-I9-d85"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="5HZ-0u-GpL" firstAttribute="top" secondItem="zsA-wd-9ZL" secondAttribute="bottom" id="15i-2W-sln"/>
+                            <constraint firstItem="zsA-wd-9ZL" firstAttribute="top" secondItem="TKj-Oi-AH5" secondAttribute="bottom" id="2KW-iX-NWH"/>
+                            <constraint firstItem="5HZ-0u-GpL" firstAttribute="centerX" secondItem="Deo-6n-cJv" secondAttribute="centerX" id="HBM-BX-Vtf"/>
+                            <constraint firstAttribute="bottom" secondItem="5HZ-0u-GpL" secondAttribute="bottom" id="Hrd-0d-igF"/>
                             <constraint firstItem="5HZ-0u-GpL" firstAttribute="width" secondItem="Deo-6n-cJv" secondAttribute="width" id="RSD-ZP-kx2"/>
-                            <constraint firstItem="5HZ-0u-GpL" firstAttribute="top" secondItem="TKj-Oi-AH5" secondAttribute="bottom" id="wiW-Mr-6Pe"/>
+                            <constraint firstItem="zsA-wd-9ZL" firstAttribute="width" secondItem="Deo-6n-cJv" secondAttribute="width" id="Ygw-OQ-yeX"/>
+                            <constraint firstItem="zsA-wd-9ZL" firstAttribute="centerX" secondItem="Deo-6n-cJv" secondAttribute="centerX" id="iyr-Kd-HZX"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Search" id="y1o-dC-L7r"/>
                     <connections>
+                        <outlet property="searchBar" destination="zsA-wd-9ZL" id="4br-9b-2c3"/>
                         <outlet property="tableView" destination="5HZ-0u-GpL" id="pKA-da-G6G"/>
                     </connections>
                 </viewController>
